[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/MainMenu/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://Logic/DialogBox/fonts/Cave-Story.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/CoffeeMenu/CoffeeMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/InventoryMenu/VanillaBean.png" type="Texture" id=5]
[ext_resource path="res://UI/InventoryMenu/Icecube.png" type="Texture" id=6]
[ext_resource path="res://UI/InventoryMenu/CocoaBean.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="CoffeeMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Popup" type="Popup" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -42.0
margin_right = 82.0
margin_bottom = 38.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlantLabel" type="Label" parent="CanvasLayer/Popup/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.5
margin_top = 1.0
margin_right = 43.5
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "What to make?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CocoaButton" type="Button" parent="CanvasLayer/Popup/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -20.0
margin_right = 52.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Popup/TextureRect/CocoaButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="CocoaBeanLabel" type="Label" parent="CanvasLayer/Popup/TextureRect/CocoaButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Cocoa"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CocoaBeanSprite" type="Sprite" parent="CanvasLayer/Popup/TextureRect/CocoaButton"]
position = Vector2( 20, 24 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 7 )

[node name="VanillaButton" type="Button" parent="CanvasLayer/Popup/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -20.0
margin_right = 100.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Popup/TextureRect/VanillaButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="VanillaBeanLabel" type="Label" parent="CanvasLayer/Popup/TextureRect/VanillaButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Vanilla"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VanillaBeanSprite" type="Sprite" parent="CanvasLayer/Popup/TextureRect/VanillaButton"]
position = Vector2( 20, 24 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 5 )

[node name="IceButton" type="Button" parent="CanvasLayer/Popup/TextureRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 108.0
margin_top = -20.0
margin_right = 148.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Popup/TextureRect/IceButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="IceBeanLabel" type="Label" parent="CanvasLayer/Popup/TextureRect/IceButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "Ice"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IceCubeSprite" type="Sprite" parent="CanvasLayer/Popup/TextureRect/IceButton"]
position = Vector2( 20, 24 )
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 6 )
[connection signal="pressed" from="CanvasLayer/Popup/TextureRect/CocoaButton" to="." method="_on_CocoaButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Popup/TextureRect/VanillaButton" to="." method="_on_VanillaButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Popup/TextureRect/IceButton" to="." method="_on_IceButton_pressed"]
